--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ cmake-build-*/
 *.iws
 
 # IntelliJ
-#out/
+out/
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
