--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ cmake-build-*/
 # File-based project format
 *.iws
 
+# IntelliJ
+out/
+
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
